tests/snapshots/output_command_snapshot_tests__tar_output.snap
---
source: tests/output_command_snapshot_tests.rs
expression: snapshot
snapshot_kind: text
---
status: ExitStatus(unix_wait_status(0))
stdout:
tar output fake
stderr:
tar stderr fake
